--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,3 +1,12 @@
+a:link,
+a:hover,
+a:active,
+a:visited{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
 .body_bgc{
     background-color: #242C31;
 }
@@ -9,4 +18,71 @@
 }
 .login{
     margin-top: 20%;
+}
+/* 首页左侧 */
+.lt_aside{
+    background-color: #242C31;
+    position: fixed;
+    left:0;
+    top:0;
+    width: 180px;
+    height:100%;
+}
+.lt_aside .title{
+    height: 50px;
+    background-color: #487EA5;
+    font-size: 25px;
+    line-height: 50px;
+    text-align: center;
+    color: #fff;
+}
+.lt_aside .user img{
+    display: block;
+    border: 1px solid #ccc;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+.lt_aside .user p{
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    font-size: 18px;
+}
+.lt_aside .user {
+    padding: 30px 0;
+}
+.lt_aside .nav ul{
+    padding-left: 0;
+}
+.lt_aside .nav li a{
+    display: block;
+    line-height: 40px;
+    color: #fff;
+    font-size: 14px;
+    padding-left: 45px;
+}
+.lt_aside .nav li a i{
+    margin-right: 2px;
+}
+.lt_aside .nav li .class{
+    padding-left: 20px;
+}
+.lt_content{
+    padding-left: 180px;
+}
+.lt_content .top{
+    height: 50px;
+    width: 100%;
+    background-color: #508CB8;
+}
+.lt_content .top a{
+    display: block;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
+    line-height: 50px;
+    color: #fff;
 }
